updated versioning offer/order
